Update and rename LeaderPortfolio.html to Zulkifl.html

--- a/GroupLeader/Zulkifl.html
+++ b/GroupLeader/Zulkifl.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My Portfolio - Ali</title>
+  <title>My Portfolio - Zulkifl</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -32,7 +32,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">Ali's Page</a>
+      <a class="navbar-brand fw-bold" href="#">Zulkifl Page</a>
     </div>
   </nav>
 
@@ -42,8 +42,8 @@
       <div class="col-md-8 col-lg-6">
         <div class="card p-4">
           <div class="text-center">
-            <img src="https://live.staticflickr.com/5208/5281086220_3ac5878483_b.jpg" class="profile-img mb-3" alt="Profile">
-            <h3 class="fw-bold">John Doe</h3>
+            <img src="https://i.pinimg.com/736x/af/27/77/af2777597051b3a9403458b12de9b1bc.jpg" class="profile-img mb-3" alt="Profile">
+            <h3 class="fw-bold">ZUlkifl Khalid</h3>
             <p class="text-muted">BS IT Student | BUIC</p>
           </div>
 
@@ -51,7 +51,7 @@
 
           <h5>About Me</h5>
           <p>
-            Hello! I'm John Doe, an enthusiastic student learning GitHub collaboration and web design.
+            Hello! I'm Zulkifl, an enthusiastic student learning GitHub collaboration and web design.
             This page is part of my ICT Lab 7 activity where I am working with my team.
           </p>
 
@@ -64,12 +64,12 @@
 
           <h5>My Teammates</h5>
           <ol>
-            <li>Person 1</li>
-            <li>Person 2</li>
+            <li>Abyan</li>
+            <li>Babar</li>
           </ol>
 
           <div class="text-center mt-4">
-            <p><a href="https://github.com/AdnanAdj" class="btn btn-primary" target="_blank">Visit My GitHub</a></p>
+            <p><a href="https://github.com/zulkifl924" class="btn btn-primary" target="_blank">Visit My GitHub</a></p>
             <p><a href="https://github.com/AdnanAdj" class="btn btn-secondary" target="_blank">Visit My Instructor’s GitHub</a></p>
           </div>
         </div>
